--- a/package.json
+++ b/package.json
@@ -20,8 +20,16 @@
     "typescript": "~4.9.4"
   },
   "dependencies": {
+    "@aws-cdk/aws-apigatewayv2-alpha": "^2.62.2-alpha.0",
+    "@aws-cdk/aws-apigatewayv2-integrations-alpha": "^2.62.2-alpha.0",
+    "@types/aws-lambda": "^8.10.110",
+    "@types/aws-sdk": "^2.7.0",
+    "@types/uuid": "^9.0.0",
     "aws-cdk-lib": "2.62.0",
+    "aws-lambda": "^1.0.7",
+    "aws-sdk": "^2.1304.0",
     "constructs": "^10.0.0",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "uuid": "^9.0.0"
   }
 }
